Improve microphone and speaker error handling